--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
 </head>
 
 <body>
-  <div id="root"></div>
+  <div class="container" id="root"></div>
   <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
